force-app/main/default/objects/Product_Sub_Summary__c/Product_Sub_Summary__c.object-meta.xml
<CustomObject>
    <description>Created for Dental Bussiness Account Detail</description>
    <label>Product Sub Summary</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Sub Summary Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Sub Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>