force-app/main/default/objects/Product_Sub_Summary__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Product Sub Summaries</relationshipLabel>
    <relationshipName>Product_Sub_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>