force-app/main/default/objects/Product_Sub_Summary__c/fields/CHANGE_ADV_INT_HEX_ABUTS__c.field-meta.xml
<CustomField>
    <fullName>CHANGE_ADV_INT_HEX_ABUTS__c</fullName>
    <formula>( YTD_ADV_INT_HEX_ABUTS__c - PYTD_ADV_INT_HEX_ABUTS__c ) / PYTD_ADV_INT_HEX_ABUTS__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% CHANGE ADV &amp; INT HEX ABUTS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>