force-app/main/default/objects/Product_Sub_Summary__c/fields/CHANGE_COLLA_BIOMEND_SRM__c.field-meta.xml
<CustomField>
    <fullName>CHANGE_COLLA_BIOMEND_SRM__c</fullName>
    <formula>( YTD_COLLA_BIOMEND_SRM__c - PYTD_COLLA_BIOMEND_SRM__c ) / PYTD_COLLA_BIOMEND_SRM__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% CHANGE COLLA/BIOMEND/SRM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>