force-app/main/default/objects/Product_Sub_Summary__c/fields/CHANGE_CURV__c.field-meta.xml
<CustomField>
    <fullName>CHANGE_CURV__c</fullName>
    <formula>( YTD_CURV__c - PYTD_CURV__c ) / PYTD_CURV__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% CHANGE CURV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>