force-app/main/default/objects/Product_Sub_Summary__c/fields/CHANGE_DBM__c.field-meta.xml
<CustomField>
    <fullName>CHANGE_DBM__c</fullName>
    <formula>( YTD_DBM__c - PYTD_DBM__c ) / PYTD_DBM__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% CHANGE DBM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>