force-app/main/default/objects/Product_Sub_Summary__c/fields/CHANGE_DERMIS__c.field-meta.xml
<CustomField>
    <fullName>CHANGE_DERMIS__c</fullName>
    <formula>( YTD_DERMIS__c - PYTD_DERMIS__c ) / PYTD_DERMIS__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% CHANGE DERMIS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>