force-app/main/default/objects/Product_Sub_Summary__c/fields/CHANGE_DRILL_STOP_KITS__c.field-meta.xml
<CustomField>
    <fullName>CHANGE_DRILL_STOP_KITS__c</fullName>
    <formula>( YTD_DRILL_STOP_KITS__c - PYTD_DRILL_STOP_KITS__c ) / PYTD_DRILL_STOP_KITS__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% CHANGE DRILL STOP KITS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>