force-app/main/default/objects/Product_Sub_Summary__c/fields/CHANGE_ERA_LOC_BALL_ABUTS__c.field-meta.xml
<CustomField>
    <fullName>CHANGE_ERA_LOC_BALL_ABUTS__c</fullName>
    <formula>( YTD_ERA_LOC_BALL_ABUTS__c - PYTD_ERA_LOC_BALL_ABUTS__c ) / PYTD_ERA_LOC_BALL_ABUTS__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% CHANGE ERA/LOC/BALL ABUTS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>