force-app/main/default/objects/Product_Sub_Summary__c/fields/CHANGE_ERA_PROSTHETIC_KITS__c.field-meta.xml
<CustomField>
    <fullName>CHANGE_ERA_PROSTHETIC_KITS__c</fullName>
    <formula>( YTD_ERA_PROSTHETIC_KITS__c - PYTD_ERA_PROSTHETIC_KITS__c ) / PYTD_ERA_PROSTHETIC_KITS__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% CHANGE ERA PROSTHETIC KITS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>