force-app/main/default/objects/Product_Sub_Summary__c/fields/CHANGE_G_SURG_COMBO__c.field-meta.xml
<CustomField>
    <fullName>CHANGE_G_SURG_COMBO__c</fullName>
    <formula>( YTD_G_SURG_COMBO__c - PYTD_G_SURG_COMBO__c ) / PYTD_G_SURG_COMBO__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% CHANGE G. SURG.COMBO</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>