force-app/main/default/objects/Product_Sub_Summary__c/fields/CHANGE_HEMCON__c.field-meta.xml
<CustomField>
    <fullName>CHANGE_HEMCON__c</fullName>
    <formula>( YTD_HEMCON__c - PYTD_HEMCON__c ) / PYTD_HEMCON__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% CHANGE HEMCON</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>