force-app/main/default/objects/Product_Sub_Summary__c/fields/CHANGE_IMPLANTS_TRBM__c.field-meta.xml
<CustomField>
    <fullName>CHANGE_IMPLANTS_TRBM__c</fullName>
    <formula>( YTD_IMPLANTS_TRBM__c - PYTD_IMPLANTS_TRBM__c ) / PYTD_IMPLANTS_TRBM__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% CHANGE IMPLANTS TRBM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>