force-app/main/default/objects/Product_Sub_Summary__c/fields/CHANGE_PERICARDIUM__c.field-meta.xml
<CustomField>
    <fullName>CHANGE_PERICARDIUM__c</fullName>
    <formula>( YTD_PERICARDIUM__c - PYTD_PERICARDIUM__c ) / PYTD_PERICARDIUM__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% CHANGE PERICARDIUM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>