force-app/main/default/objects/Product_Sub_Summary__c/fields/CHANGE_PSA_ABUTS__c.field-meta.xml
<CustomField>
    <fullName>CHANGE_PSA_ABUTS__c</fullName>
    <formula>(YTD_PSA_ABUTS__c - PYTD_PSA_ABUTS__c )/ PYTD_PSA_ABUTS__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% CHANGE PSA ABUTS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>