force-app/main/default/objects/Product_Sub_Summary__c/fields/CHANGE_PUROS_BONE__c.field-meta.xml
<CustomField>
    <fullName>CHANGE_PUROS_BONE__c</fullName>
    <formula>( YTD_PUROS_BONE__c - PYTD_PUROS_BONE__c ) / PYTD_PUROS_BONE__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% CHANGE PUROS BONE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>