force-app/main/default/objects/Product_Sub_Summary__c/fields/CHANGE_REPLACEMENT_DRILLS__c.field-meta.xml
<CustomField>
    <fullName>CHANGE_REPLACEMENT_DRILLS__c</fullName>
    <formula>( YTD_REPLACEMENT_DRILLS__c - PYTD_REPLACEMENT_DRILLS__c ) / PYTD_REPLACEMENT_DRILLS__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% CHANGE REPLACEMENT DRILLS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>