force-app/main/default/objects/Product_Sub_Summary__c/fields/CHANGE_SIMPLANT__c.field-meta.xml
<CustomField>
    <fullName>CHANGE_SIMPLANT__c</fullName>
    <formula>( YTD_SIMPLANT__c - PYTD_SIMPLANT__c ) / PYTD_SIMPLANT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% CHANGE SIMPLANT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>