force-app/main/default/objects/Product_Sub_Summary__c/fields/CHANGE_SLA_SCA_KITS__c.field-meta.xml
<CustomField>
    <fullName>CHANGE_SLA_SCA_KITS__c</fullName>
    <formula>( YTD_SLA_SCA_KITS__c - PYTD_SLA_SCA_KITS__c ) / PYTD_SLA_SCA_KITS__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% CHANGE SLA &amp; SCA KITS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>