force-app/main/default/objects/Product_Sub_Summary__c/fields/CHANGE_WEDGE_CAPSULE__c.field-meta.xml
<CustomField>
    <fullName>CHANGE_WEDGE_CAPSULE__c</fullName>
    <formula>( YTD_WEDGE_CAPSULE__c - PYTD_WEDGE_CAPSULE__c ) / PYTD_WEDGE_CAPSULE__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% CHANGE WEDGE/CAPSULE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>