force-app/main/default/objects/Product_Sub_Summary__c/fields/PYTD_ADV_INT_HEX_ABUTS__c.field-meta.xml
<CustomField>
    <fullName>PYTD_ADV_INT_HEX_ABUTS__c</fullName>
    <label>PYTD ADV &amp; INT HEX ABUTS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>