force-app/main/default/objects/Product_Sub_Summary__c/fields/PYTD_COLLA_BIOMEND_SRM__c.field-meta.xml
<CustomField>
    <fullName>PYTD_COLLA_BIOMEND_SRM__c</fullName>
    <label>PYTD COLLA/BIOMEND/SRM</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>