force-app/main/default/objects/Product_Sub_Summary__c/fields/PYTD_CURV__c.field-meta.xml
<CustomField>
    <fullName>PYTD_CURV__c</fullName>
    <label>PYTD CURV</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>