force-app/main/default/objects/Product_Sub_Summary__c/fields/PYTD_DBM__c.field-meta.xml
<CustomField>
    <fullName>PYTD_DBM__c</fullName>
    <label>PYTD DBM</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>