force-app/main/default/objects/Product_Sub_Summary__c/fields/PYTD_DERMIS__c.field-meta.xml
<CustomField>
    <fullName>PYTD_DERMIS__c</fullName>
    <label>PYTD DERMIS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>