force-app/main/default/objects/Product_Sub_Summary__c/fields/PYTD_ERA_PROSTHETIC_KITS__c.field-meta.xml
<CustomField>
    <fullName>PYTD_ERA_PROSTHETIC_KITS__c</fullName>
    <label>PYTD ERA PROSTHETIC KITS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>