force-app/main/default/objects/Product_Sub_Summary__c/fields/PYTD_G_SURG_COMBO__c.field-meta.xml
<CustomField>
    <fullName>PYTD_G_SURG_COMBO__c</fullName>
    <label>PYTD G. SURG.COMBO</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>