force-app/main/default/objects/Product_Sub_Summary__c/fields/PYTD_IMPLANTS_ADVENT__c.field-meta.xml
<CustomField>
    <fullName>PYTD_IMPLANTS_ADVENT__c</fullName>
    <label>PYTD IMPLANTS ADVENT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>