force-app/main/default/objects/Product_Sub_Summary__c/fields/PYTD_IMPLANTS_ERA__c.field-meta.xml
<CustomField>
    <fullName>PYTD_IMPLANTS_ERA__c</fullName>
    <label>PYTD IMPLANTS ERA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>