force-app/main/default/objects/Product_Sub_Summary__c/fields/PYTD_PLASTIC_TEMP_ABUTS__c.field-meta.xml
<CustomField>
    <fullName>PYTD_PLASTIC_TEMP_ABUTS__c</fullName>
    <label>PYTD PLASTIC TEMP ABUTS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>