force-app/main/default/objects/Product_Sub_Summary__c/fields/PYTD_PUROS_BONE__c.field-meta.xml
<CustomField>
    <fullName>PYTD_PUROS_BONE__c</fullName>
    <label>PYTD PUROS BONE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>