force-app/main/default/objects/Product_Sub_Summary__c/fields/PYTD_REPLACEMENT_DRILLS__c.field-meta.xml
<CustomField>
    <fullName>PYTD_REPLACEMENT_DRILLS__c</fullName>
    <label>PYTD REPLACEMENT DRILLS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>