force-app/main/default/objects/Product_Sub_Summary__c/fields/PYTD_SLA_SCA_KITS__c.field-meta.xml
<CustomField>
    <fullName>PYTD_SLA_SCA_KITS__c</fullName>
    <label>PYTD SLA &amp; SCA KITS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>