force-app/main/default/objects/Product_Sub_Summary__c/fields/YTD_CURV__c.field-meta.xml
<CustomField>
    <fullName>YTD_CURV__c</fullName>
    <label>YTD CURV</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>