force-app/main/default/objects/Product_Sub_Summary__c/fields/YTD_ERA_LOC_BALL_ABUTS__c.field-meta.xml
<CustomField>
    <fullName>YTD_ERA_LOC_BALL_ABUTS__c</fullName>
    <label>YTD ERA/LOC/BALL ABUTS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>