force-app/main/default/objects/Product_Sub_Summary__c/fields/YTD_ERA_SURGICAL_KITS__c.field-meta.xml
<CustomField>
    <fullName>YTD_ERA_SURGICAL_KITS__c</fullName>
    <label>YTD ERA SURGICAL KITS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>