force-app/main/default/objects/Product_Sub_Summary__c/fields/YTD_G_SURG_COMBO__c.field-meta.xml
<CustomField>
    <fullName>YTD_G_SURG_COMBO__c</fullName>
    <label>YTD G. SURG.COMBO</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>