force-app/main/default/objects/Product_Sub_Summary__c/fields/YTD_HEMCON__c.field-meta.xml
<CustomField>
    <fullName>YTD_HEMCON__c</fullName>
    <label>YTD HEMCON</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>