force-app/main/default/objects/Product_Sub_Summary__c/fields/YTD_IMPLANTS_SCREW_VENT__c.field-meta.xml
<CustomField>
    <fullName>YTD_IMPLANTS_SCREW_VENT__c</fullName>
    <label>YTD IMPLANTS SCREW VENT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>