force-app/main/default/objects/Product_Sub_Summary__c/fields/YTD_PLASTIC_TEMP_ABUTS__c.field-meta.xml
<CustomField>
    <fullName>YTD_PLASTIC_TEMP_ABUTS__c</fullName>
    <label>YTD PLASTIC TEMP ABUTS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>