force-app/main/default/objects/Product_Sub_Summary__c/fields/YTD_PSA_ABUTS__c.field-meta.xml
<CustomField>
    <fullName>YTD_PSA_ABUTS__c</fullName>
    <label>YTD PSA ABUTS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>