force-app/main/default/objects/Product_Sub_Summary__c/fields/YTD_PUROS_BONE__c.field-meta.xml
<CustomField>
    <fullName>YTD_PUROS_BONE__c</fullName>
    <label>YTD PUROS BONE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>