force-app/main/default/objects/Product_Sub_Summary__c/fields/YTD_SIMPLANT__c.field-meta.xml
<CustomField>
    <fullName>YTD_SIMPLANT__c</fullName>
    <label>YTD SIMPLANT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>