force-app/main/default/objects/Product_Sub_Summary__c/fields/YTD_WEDGE_CAPSULE__c.field-meta.xml
<CustomField>
    <fullName>YTD_WEDGE_CAPSULE__c</fullName>
    <label>YTD WEDGE/CAPSULE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>